# app/model/ask/ask_model.go
@@ -2,7 +2,7 @@
 // This is auto-generated by gf cli tool. You may not really want to edit it.
 // ==========================================================================
 
-package reply
+package ask
 
 import (
 	"database/sql"
@@ -12,41 +12,55 @@ import (
 	"time"
 )
 
-// arModel is a active record design model for table gf_reply operations.
+// arModel is a active record design model for table gf_ask operations.
 type arModel struct {
 	gmvc.M
 }
 
 var (
-	// Table is the table name of gf_reply.
-	Table = "gf_reply"
-	// Model is the model object of gf_reply.
+	// Table is the table name of gf_ask.
+	Table = "gf_ask"
+	// Model is the model object of gf_ask.
 	Model = &arModel{g.DB("default").Table(Table).Safe()}
-	// Columns defines and stores column names for table gf_reply.
+	// Columns defines and stores column names for table gf_ask.
 	Columns = struct {
-		Id           string // 回复ID                                   
-        ParentId     string // 回复对应的上一级回复ID(没有的话默认为0)  
-        ContentType  string // 评论类型: topic, ask, article, reply     
-        TargetId     string // 对应内容ID                               
-        UserId       string // 网站用户ID                               
-        ZanCount     string // 赞                                       
-        CaiCount     string // 踩                                       
-        Title        string // 回复标题                                 
-        Content      string // 回复内容                                 
-        CreatedAt    string // 创建时间                                 
-        UpdatedAt    string //
+		Id          string // 自增ID                                                  
+        Key         string // 唯一键名，用于程序硬编码，一般不常用                    
+        CategoryId  string // 栏目ID                                                  
+        UserId      string // 用户ID                                                  
+        AdoptId     string // 采纳的回复ID，问答模块有效                              
+        Title       string // 标题                                                    
+        Content     string // 内容                                                    
+        Sort        string // 排序，数值越低越靠前，默认为添加时的时间戳，可用于置顶  
+        Brief       string // 摘要                                                    
+        Thumb       string // 缩略图                                                  
+        Tags        string // 标签名称列表，以JSON存储                                
+        Referer     string // 内容来源，例如github/gitee                              
+        Status      string // 状态 0: 正常, 1: 禁用                                   
+        ViewCount   string // 浏览数量                                                
+        ZanCount    string // 赞                                                      
+        CaiCount    string // 踩                                                      
+        CreatedAt   string // 创建时间                                                
+        UpdatedAt   string // 修改时间
 	}{
-		Id:          "id",            
-        ParentId:    "parent_id",     
-        ContentType: "content_type",  
-        TargetId:    "target_id",     
-        UserId:      "user_id",       
-        ZanCount:    "zan_count",     
-        CaiCount:    "cai_count",     
-        Title:       "title",         
-        Content:     "content",       
-        CreatedAt:   "created_at",    
-        UpdatedAt:   "updated_at",
+		Id:         "id",           
+        Key:        "key",          
+        CategoryId: "category_id",  
+        UserId:     "user_id",      
+        AdoptId:    "adopt_id",     
+        Title:      "title",        
+        Content:    "content",      
+        Sort:       "sort",         
+        Brief:      "brief",        
+        Thumb:      "thumb",        
+        Tags:       "tags",         
+        Referer:    "referer",      
+        Status:     "status",       
+        ViewCount:  "view_count",   
+        ZanCount:   "zan_count",    
+        CaiCount:   "cai_count",    
+        CreatedAt:  "created_at",   
+        UpdatedAt:  "updated_at",
 	}
 )
 
