# app/model/ask_tag/ask_tag_model.go
@@ -2,7 +2,7 @@
 // This is auto-generated by gf cli tool. You may not really want to edit it.
 // ==========================================================================
 
-package reply
+package ask_tag
 
 import (
 	"database/sql"
@@ -12,41 +12,29 @@ import (
 	"time"
 )
 
-// arModel is a active record design model for table gf_reply operations.
+// arModel is a active record design model for table gf_ask_tag operations.
 type arModel struct {
 	gmvc.M
 }
 
 var (
-	// Table is the table name of gf_reply.
-	Table = "gf_reply"
-	// Model is the model object of gf_reply.
+	// Table is the table name of gf_ask_tag.
+	Table = "gf_ask_tag"
+	// Model is the model object of gf_ask_tag.
 	Model = &arModel{g.DB("default").Table(Table).Safe()}
-	// Columns defines and stores column names for table gf_reply.
+	// Columns defines and stores column names for table gf_ask_tag.
 	Columns = struct {
-		Id           string // 回复ID                                   
-        ParentId     string // 回复对应的上一级回复ID(没有的话默认为0)  
-        ContentType  string // 评论类型: topic, ask, article, reply     
-        TargetId     string // 对应内容ID                               
-        UserId       string // 网站用户ID                               
-        ZanCount     string // 赞                                       
-        CaiCount     string // 踩                                       
-        Title        string // 回复标题                                 
-        Content      string // 回复内容                                 
-        CreatedAt    string // 创建时间                                 
-        UpdatedAt    string //
+		Id         string //           
+        AskId      string // 话题ID    
+        TagName    string // 标签名称  
+        CreatedAt  string // 创建时间  
+        UpdatedAt  string // 修改时间
 	}{
-		Id:          "id",            
-        ParentId:    "parent_id",     
-        ContentType: "content_type",  
-        TargetId:    "target_id",     
-        UserId:      "user_id",       
-        ZanCount:    "zan_count",     
-        CaiCount:    "cai_count",     
-        Title:       "title",         
-        Content:     "content",       
-        CreatedAt:   "created_at",    
-        UpdatedAt:   "updated_at",
+		Id:        "id",          
+        AskId:     "ask_id",      
+        TagName:   "tag_name",    
+        CreatedAt: "created_at",  
+        UpdatedAt: "updated_at",
 	}
 )
 
